chore: update log file with integration test run entries